# mandel

./: README.md  find-rnd  mandel.cabal  stack.yaml
app/: Main.hs
src/: Lib.hs  Lib2.hs  Lib3.hs  Lib4.hs
