name:                mandel
version:             0.1.0.0
synopsis:            Answer to http://stackoverflow.com/q/38705886
description:         Examples of a concurrent queue - a problemati cone
                     implemented with STM and another using Unagi Chans
homepage:            https://github.com/erantapaa/mandel#readme
license:             BSD3
license-file:        LICENSE
author:              Erik Rantapaa
maintainer:          erantapaa@gmail.com
copyright:           2016 Erik Rantapaa
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Lib2, Lib3, Lib4
  build-depends:       base >= 4.7 && < 5, bytestring, monad-loops, binary, random, stm, async, unagi-chan, time
  default-language:    Haskell2010

executable mandel-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mandel
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/erantapaa/mandel

